kustomize/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus-svc
  namespace: oraex-cicd
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deployment: nexus
  sessionAffinity: None
  type: ClusterIP
