kustomize/application/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus
  namespace: oraex-cicd
  labels:
    app: nexus
spec:
  host: nexus-oraex-cicd.apps.middleware.rhbr-lab.com
  to:
    kind: Service
    name: nexus
    weight: 100
  port:
    targetPort: 8081-tcp
  wildcardPolicy: None
